[gd_scene load_steps=9 format=3 uid="uid://g6pr41r3rkwt"]

[ext_resource type="Script" uid="uid://cmogcusjq3ixd" path="res://Scenes/UI/death_escene.gd" id="1_1cpte"]
[ext_resource type="FontFile" uid="uid://svpcl760do82" path="res://Resources/fonts/Breathe Fire II.otf" id="1_rmv7g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rmv7g"]
bg_color = Color(0.31260636, 0.31260636, 0.31260636, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i2pau"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eqr7w"]
bg_color = Color(0.7921569, 0.18431373, 0.21176471, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1cpte"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tnx3s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_13d4d"]

[node name="DeathMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1cpte")

[node name="GameOver" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.011764706, 0.011764706, 0.011764706, 0.39215687)

[node name="PanelContainer" type="PanelContainer" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -199.0
offset_top = -110.5
offset_right = 199.0
offset_bottom = 110.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rmv7g")

[node name="MarginContainer" type="MarginContainer" parent="GameOver/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Label" type="Label" parent="GameOver/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_rmv7g")
theme_override_font_sizes/font_size = 54
text = "GAME OVER"

[node name="Label2" type="Label" parent="GameOver/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_rmv7g")
theme_override_font_sizes/font_size = 26
text = "Quieres continuar? 
"

[node name="botonera" type="HBoxContainer" parent="GameOver/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 33

[node name="botonYes" type="Button" parent="GameOver/PanelContainer/MarginContainer/VBoxContainer/botonera"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_hover_color = Color(0.62297034, 4.7288463e-06, 0.08709922, 1)
theme_override_fonts/font = ExtResource("1_rmv7g")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_i2pau")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i2pau")
theme_override_styles/hover = SubResource("StyleBoxFlat_eqr7w")
text = "Si"
flat = true
alignment = 0

[node name="botonNo" type="Button" parent="GameOver/PanelContainer/MarginContainer/VBoxContainer/botonera"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_hover_color = Color(0.62352943, 0, 0.08627451, 1)
theme_override_fonts/font = ExtResource("1_rmv7g")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_1cpte")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tnx3s")
theme_override_styles/hover = SubResource("StyleBoxFlat_13d4d")
text = "No"
flat = true
alignment = 0

[connection signal="pressed" from="GameOver/PanelContainer/MarginContainer/VBoxContainer/botonera/botonYes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="GameOver/PanelContainer/MarginContainer/VBoxContainer/botonera/botonNo" to="." method="_on_no_pressed"]
